--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
 *{
   margin: 0;
   padding: 0;
@@ -6,4 +9,7 @@
 b,p,h1,h2,button,div{
   font-family: 'Times New Roman', Times, serif;
   
-}
+} 
+/* body{
+  overflow-x: hidden;
+} */
